--- a/home.html
+++ b/home.html
@@ -109,29 +109,34 @@
       padding: 12px;
     }
 
-    /* مستطيلات الإعلانات بحركة انزلاق */
+    /* مستطيلات الإعلانات */
     #ad-slider {
       position: relative;
       height: 150px;
-      overflow: hidden;
       border-radius: 12px;
-    }
-
-    .ad-wrapper {
-      display: flex;
-      transition: transform 1s ease-in-out;
-      width: 300%;
+      overflow: hidden;
     }
 
     .ad-slide {
-      flex: 0 0 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      opacity: 0;
+      transition: opacity 2s ease-in-out;
     }
 
-    .ad-slide img {
+    .ad-slide.active {
+      opacity: 1;
+      z-index: 1;
+    }
+
+    .fade img {
       width: 100%;
       height: 150px;
       object-fit: cover;
       border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
   </style>
 </head>
@@ -145,86 +150,126 @@
   <!-- المحتوى الرئيسي -->
   <div class="main-content">
 
-    <!-- إعلانات تنزلق من اليسار لليمين -->
+    <!-- إعلانات سياحية متغيرة -->
     <div class="container my-4">
       <div id="ad-slider">
-        <div class="ad-wrapper" id="adWrapper">
-          <div class="ad-slide"><img src="ad1.jpg" alt="إعلان 1"></div>
-          <div class="ad-slide"><img src="ad2.png" alt="إعلان 2"></div>
-          <div class="ad-slide"><img src="ad3.png" alt="إعلان 3"></div>
+        <div class="ad-slide fade active">
+          <img src="ad1.jpg" alt="إعلان 1">
+        </div>
+        <div class="ad-slide fade">
+          <img src="ad2.png" alt="إعلان 2">
+        </div>
+        <div class="ad-slide fade">
+          <img src="ad3.png" alt="إعلان 3">
         </div>
       </div>
     </div>
-
-    <!-- ساعات عالمية -->
-    <div class="container my-5">
-      <div class="row text-center g-4">
-        <div class="col-4"><div class="clock-circle" id="clock-ny"></div><div class="city-label">نيويورك</div></div>
-        <div class="col-4"><div class="clock-circle" id="clock-london"></div><div class="city-label">لندن</div></div>
-        <div class="col-4"><div class="clock-circle" id="clock-tokyo"></div><div class="city-label">طوكيو</div></div>
-        <div class="col-4"><div class="clock-circle" id="clock-dubai"></div><div class="city-label">الرياض</div></div>
-        <div class="col-4"><div class="clock-circle" id="clock-paris"></div><div class="city-label">باريس</div></div>
-        <div class="col-4"><div class="clock-circle" id="clock-sydney"></div><div class="city-label">سيدني</div></div>
-      </div>
+<!-- ساعات عالمية -->
+<div class="container my-5">
+  <div class="row text-center g-4">
+    <div class="col-4">
+      <div class="clock-circle" id="clock-ny"></div>
+      <div class="city-label">نيويورك</div>
     </div>
+    <div class="col-4">
+      <div class="clock-circle" id="clock-london"></div>
+      <div class="city-label">لندن</div>
+    </div>
+    <div class="col-4">
+      <div class="clock-circle" id="clock-tokyo"></div>
+      <div class="city-label">طوكيو</div>
+    </div>
+    <div class="col-4">
+      <div class="clock-circle" id="clock-dubai"></div>
+      <div class="city-label">دبي</div>
+    </div>
+    <div class="col-4">
+      <div class="clock-circle" id="clock-paris"></div>
+      <div class="city-label">باريس</div>
+    </div>
+    <div class="col-4">
+      <div class="clock-circle" id="clock-sydney"></div>
+      <div class="city-label">سيدني</div>
+    </div>
+  </div>
+</div>
 
-    <style>
-      .clock-circle {
-        width: 100px;
-        height: 100px;
-        margin: 0 auto;
-        border: 4px solid #aaa;
-        border-radius: 50%;
-        background: #fff;
-        color: #000;
-        font-size: 16px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: monospace;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-      }
+<style>
+  .clock-circle {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    border: 4px solid #aaa;
+    border-radius: 50%;
+    background: #fff;
+    color: #000;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: monospace;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+  }
 
-      .city-label {
-        margin-top: 10px;
-        font-size: 15px;
-        color: #ccc;
-      }
-    </style>
+  .city-label {
+    margin-top: 10px;
+    font-size: 15px;
+    color: #ccc;
+  }
+</style>
 
-    <script>
-      const clocks = [
-        { id: 'clock-ny', zone: 'America/New_York' },
-        { id: 'clock-london', zone: 'Europe/London' },
-        { id: 'clock-tokyo', zone: 'Asia/Tokyo' },
-        { id: 'clock-dubai', zone: 'Asia/Riyadh' },
-        { id: 'clock-paris', zone: 'Europe/Paris' },
-        { id: 'clock-sydney', zone: 'Australia/Sydney' }
-      ];
+<script>
+  const clocks = [
+    { id: 'clock-ny', zone: 'America/New_York' },
+    { id: 'clock-london', zone: 'Europe/London' },
+    { id: 'clock-tokyo', zone: 'Asia/Tokyo' },
+    { id: 'clock-dubai', zone: 'Asia/Dubai' },
+    { id: 'clock-paris', zone: 'Europe/Paris' },
+    { id: 'clock-sydney', zone: 'Australia/Sydney' }
+  ];
 
-      function updateClocks() {
-        clocks.forEach(clock => {
-          const time = new Date().toLocaleTimeString('en-US', {
-            hour: '2-digit',
-            minute: '2-digit',
-            hour12: false,
-            timeZone: clock.zone
-          });
-          document.getElementById(clock.id).textContent = time;
-        });
-      }
+  function updateClocks() {
+    clocks.forEach(clock => {
+      const time = new Date().toLocaleTimeString('en-US', {
+        hour: '2-digit',
+        minute: '2-digit',
+        hour12: false,
+        timeZone: clock.zone
+      });
+      document.getElementById(clock.id).textContent = time;
+    });
+  }
 
-      updateClocks();
-      setInterval(updateClocks, 60000);
-    </script>
-
+  updateClocks();
+  setInterval(updateClocks, 60000);
+</script>
     <!-- الوجهات -->
     <div class="container destinations">
       <div class="row g-3">
-        <div class="col-6"><div class="destination-card"><img src="qairo.png" alt="القاهرة"><h5>القاهرة</h5></div></div>
-        <div class="col-6"><div class="destination-card"><img src="dubai.png" alt="دبي"><h5>دبي</h5></div></div>
-        <div class="col-6"><div class="destination-card"><img src="thailand.png" alt="تايلاند"><h5>تايلاند</h5></div></div>
-        <div class="col-6"><div class="destination-card"><img src="istanbul.png" alt="إسطنبول"><h5>إسطنبول</h5></div></div>
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="qairo.png" alt="القاهرة">
+            <h5>القاهرة</h5>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="dubai.png" alt="دبي">
+            <h5>دبي</h5>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="thailand.png" alt="تايلاند">
+            <h5>تايلاند</h5>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="istanbul.png" alt="إسطنبول">
+            <h5>إسطنبول</h5>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -251,16 +296,16 @@
   </div>
 
   <script>
-    let currentIndex = 0;
-    const adWrapper = document.getElementById('adWrapper');
-    const slides = document.querySelectorAll('.ad-slide');
+    let adIndex = 0;
+    const ads = document.querySelectorAll('.ad-slide');
 
-    function showNextSlide() {
-      currentIndex = (currentIndex + 1) % slides.length;
-      adWrapper.style.transform = `translateX(-${currentIndex * 100}%)`;
+    function showNextAd() {
+      ads[adIndex].classList.remove('active');
+      adIndex = (adIndex + 1) % ads.length;
+      ads[adIndex].classList.add('active');
     }
 
-    setInterval(showNextSlide, 10000); // كل 10 ثوانٍ
+    setInterval(showNextAd, 10000);
   </script>
 </body>
 </html>
