--- a/home.html
+++ b/home.html
@@ -144,7 +144,7 @@
 
   <!-- الشريط العلوي -->
   <div class="navbar">
-    <img src="paygs.png" alt="Paygo Logo">
+    <img src="paygs.gif" alt="Paygo Logo">
   </div>
 
   <!-- المحتوى الرئيسي -->
