--- a/home.html
+++ b/home.html
@@ -155,7 +155,7 @@
     <div class="container my-4">
       <div id="ad-slider">
         <div class="ad-slide fade active">
-          <img src="ad1.jpg" alt="إعلان 1">
+          <img src="ad1.png" alt="إعلان 1">
         </div>
         <div class="ad-slide fade">
           <img src="ad2.png" alt="إعلان 2">
