--- a/home.html
+++ b/home.html
@@ -38,10 +38,13 @@
       align-items: center;
     }
 
-    .navbar img {
-      height: 60px;
-      width: auto;
-    }
+.navbar img {
+  height: 54px;
+  width: auto;
+  display: block;
+  align-self: center;
+  object-fit: contain;
+}
 
     .destinations {
       padding: 20px;
