--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
       display: flex;
       flex-direction: column;
       font-family: 'Cairo', sans-serif;
-      background: #000;
+      background: #fff;
       direction: rtl;
       color: #fff;
     }
