--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
       font-family: 'Cairo', sans-serif;
       background: #fff;
       direction: rtl;
-      color: #fff;
+      color: #000;
     }
 
     .main-content {
