--- a/home.html
+++ b/home.html
@@ -38,13 +38,13 @@
       align-items: center;
     }
 
-.navbar img {
-  height: 54px;
-  width: auto;
-  display: block;
-  align-self: center;
-  object-fit: contain;
-}
+    .navbar img {
+      height: 54px;
+      width: auto;
+      display: block;
+      align-self: center;
+      object-fit: contain;
+    }
 
     .destinations {
       padding: 20px;
@@ -142,6 +142,33 @@
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
+
+    /* شريط الساعات المتحرك */
+    .clock-marquee {
+      overflow: hidden;
+      white-space: nowrap;
+      background: #000;
+      padding: 15px 0;
+      margin: 40px 0;
+    }
+
+    .clock-track {
+      display: inline-block;
+      animation: scrollClocks 30s linear infinite;
+    }
+
+    .clock-item {
+      display: inline-block;
+      margin: 0 40px;
+      color: #0f0;
+      font-family: monospace;
+      font-size: 18px;
+    }
+
+    @keyframes scrollClocks {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
   </style>
 </head>
 <body>
@@ -168,112 +195,34 @@
         </div>
       </div>
     </div>
-<!-- ساعات عالمية -->
-<div class="container my-5">
-  <div class="row text-center g-4">
-    <div class="col-4">
-      <div class="clock-circle" id="clock-ny"></div>
-      <div class="city-label">نيويورك</div>
-    </div>
-    <div class="col-4">
-      <div class="clock-circle" id="clock-london"></div>
-      <div class="city-label">لندن</div>
-    </div>
-    <div class="col-4">
-      <div class="clock-circle" id="clock-tokyo"></div>
-      <div class="city-label">طوكيو</div>
-    </div>
-    <div class="col-4">
-      <div class="clock-circle" id="clock-dubai"></div>
-      <div class="city-label">دبي</div>
-    </div>
-    <div class="col-4">
-      <div class="clock-circle" id="clock-paris"></div>
-      <div class="city-label">باريس</div>
-    </div>
-    <div class="col-4">
-      <div class="clock-circle" id="clock-sydney"></div>
-      <div class="city-label">سيدني</div>
-    </div>
-  </div>
-</div>
 
-<style>
-  .clock-circle {
-    width: 100px;
-    height: 100px;
-    margin: 0 auto;
-    border: 4px solid #aaa;
-    border-radius: 50%;
-    background: #fff;
-    color: #000;
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: monospace;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-  }
+    <!-- شريط الساعات المتحرك -->
+    <div class="clock-marquee">
+      <div class="clock-track" id="clock-track">
+        <span class="clock-item" id="c-ny">نيويورك: --:--</span>
+        <span class="clock-item" id="c-london">لندن: --:--</span>
+        <span class="clock-item" id="c-tokyo">طوكيو: --:--</span>
+        <span class="clock-item" id="c-riyadh">الرياض: --:--</span>
+        <span class="clock-item" id="c-paris">باريس: --:--</span>
+        <span class="clock-item" id="c-sydney">سيدني: --:--</span>
 
-  .city-label {
-    margin-top: 10px;
-    font-size: 15px;
-    color: #ccc;
-  }
-</style>
+        <!-- تكرار الساعات بدون فراغ -->
+        <span class="clock-item" id="c-ny2">نيويورك: --:--</span>
+        <span class="clock-item" id="c-london2">لندن: --:--</span>
+        <span class="clock-item" id="c-tokyo2">طوكيو: --:--</span>
+        <span class="clock-item" id="c-riyadh2">الرياض: --:--</span>
+        <span class="clock-item" id="c-paris2">باريس: --:--</span>
+        <span class="clock-item" id="c-sydney2">سيدني: --:--</span>
+      </div>
+    </div>
 
-<script>
-  const clocks = [
-    { id: 'clock-ny', zone: 'America/New_York' },
-    { id: 'clock-london', zone: 'Europe/London' },
-    { id: 'clock-tokyo', zone: 'Asia/Tokyo' },
-    { id: 'clock-dubai', zone: 'Asia/Dubai' },
-    { id: 'clock-paris', zone: 'Europe/Paris' },
-    { id: 'clock-sydney', zone: 'Australia/Sydney' }
-  ];
-
-  function updateClocks() {
-    clocks.forEach(clock => {
-      const time = new Date().toLocaleTimeString('en-US', {
-        hour: '2-digit',
-        minute: '2-digit',
-        hour12: false,
-        timeZone: clock.zone
-      });
-      document.getElementById(clock.id).textContent = time;
-    });
-  }
-
-  updateClocks();
-  setInterval(updateClocks, 60000);
-</script>
     <!-- الوجهات -->
     <div class="container destinations">
       <div class="row g-3">
-        <div class="col-6">
-          <div class="destination-card">
-            <img src="qairo.png" alt="القاهرة">
-            <h5>القاهرة</h5>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="destination-card">
-            <img src="dubai.png" alt="دبي">
-            <h5>دبي</h5>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="destination-card">
-            <img src="thailand.png" alt="تايلاند">
-            <h5>تايلاند</h5>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="destination-card">
-            <img src="istanbul.png" alt="إسطنبول">
-            <h5>إسطنبول</h5>
-          </div>
-        </div>
+        <div class="col-6"><div class="destination-card"><img src="qairo.png"><h5>القاهرة</h5></div></div>
+        <div class="col-6"><div class="destination-card"><img src="dubai.png"><h5>دبي</h5></div></div>
+        <div class="col-6"><div class="destination-card"><img src="thailand.png"><h5>تايلاند</h5></div></div>
+        <div class="col-6"><div class="destination-card"><img src="istanbul.png"><h5>إسطنبول</h5></div></div>
       </div>
     </div>
 
@@ -285,10 +234,10 @@
 
     <div class="travel-offers">
       <div class="slider-track">
-        <div class="slide"><img src="offer1.jpg" alt="عرض 1"></div>
-        <div class="slide"><img src="offer2.jpg" alt="عرض 2"></div>
-        <div class="slide"><img src="offer3.jpg" alt="عرض 3"></div>
-        <div class="slide"><img src="offer4.jpg" alt="عرض 4"></div>
+        <div class="slide"><img src="offer1.jpg"></div>
+        <div class="slide"><img src="offer2.jpg"></div>
+        <div class="slide"><img src="offer3.jpg"></div>
+        <div class="slide"><img src="offer4.jpg"></div>
       </div>
     </div>
 
@@ -300,16 +249,45 @@
   </div>
 
   <script>
+    // تغيير الإعلانات
     let adIndex = 0;
     const ads = document.querySelectorAll('.ad-slide');
-
     function showNextAd() {
       ads[adIndex].classList.remove('active');
       adIndex = (adIndex + 1) % ads.length;
       ads[adIndex].classList.add('active');
     }
-
     setInterval(showNextAd, 10000);
+
+    // تحديث الساعات المتحركة
+    function updateClocks() {
+      const zones = {
+        'c-ny': 'America/New_York',
+        'c-london': 'Europe/London',
+        'c-tokyo': 'Asia/Tokyo',
+        'c-riyadh': 'Asia/Riyadh',
+        'c-paris': 'Europe/Paris',
+        'c-sydney': 'Australia/Sydney',
+        'c-ny2': 'America/New_York',
+        'c-london2': 'Europe/London',
+        'c-tokyo2': 'Asia/Tokyo',
+        'c-riyadh2': 'Asia/Riyadh',
+        'c-paris2': 'Europe/Paris',
+        'c-sydney2': 'Australia/Sydney'
+      };
+
+      for (const id in zones) {
+        const time = new Date().toLocaleTimeString('en-US', {
+          hour: '2-digit',
+          minute: '2-digit',
+          hour12: false,
+          timeZone: zones[id]
+        });
+        document.getElementById(id).textContent = document.getElementById(id).textContent.split(':')[0] + ': ' + time;
+      }
+    }
+    updateClocks();
+    setInterval(updateClocks, 60000);
   </script>
 </body>
 </html>
