--- a/home.html
+++ b/home.html
@@ -143,35 +143,132 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
-    /* شريط الساعات المتحرك */
-    .clock-marquee {
-      overflow: hidden;
-      white-space: nowrap;
-      background: #000;
-      padding: 15px 0;
-      margin: 40px 0;
-    }
+<!-- ساعات دائرية متحركة -->
+<div class="clock-container-animate">
+  <div class="clock-track-animate">
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-ny"></div>
+      <div class="city-label">نيويورك</div>
+    </div>
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-london"></div>
+      <div class="city-label">لندن</div>
+    </div>
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-tokyo"></div>
+      <div class="city-label">طوكيو</div>
+    </div>
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-dubai"></div>
+      <div class="city-label">دبي</div>
+    </div>
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-paris"></div>
+      <div class="city-label">باريس</div>
+    </div>
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-sydney"></div>
+      <div class="city-label">سيدني</div>
+    </div>
+    <!-- تكرار نفس الساعات -->
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-ny2"></div>
+      <div class="city-label">نيويورك</div>
+    </div>
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-london2"></div>
+      <div class="city-label">لندن</div>
+    </div>
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-tokyo2"></div>
+      <div class="city-label">طوكيو</div>
+    </div>
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-dubai2"></div>
+      <div class="city-label">دبي</div>
+    </div>
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-paris2"></div>
+      <div class="city-label">باريس</div>
+    </div>
+    <div class="clock-item text-center">
+      <div class="clock-circle" id="clock-sydney2"></div>
+      <div class="city-label">سيدني</div>
+    </div>
+  </div>
+</div>
 
-    .clock-track {
-      display: inline-block;
-      animation: scrollClocks 30s linear infinite;
-    }
+<style>
+.clock-container-animate {
+  overflow: hidden;
+  background: #000;
+  padding: 20px 0;
+  direction: ltr;
+}
+.clock-track-animate {
+  display: flex;
+  width: max-content;
+  animation: scrollClocks 60s linear infinite;
+}
+.clock-item {
+  margin: 0 25px;
+}
+.clock-circle {
+  width: 90px;
+  height: 90px;
+  margin: auto;
+  border: 4px solid #aaa;
+  border-radius: 50%;
+  background: #fff;
+  color: #000;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: monospace;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+}
+.city-label {
+  margin-top: 8px;
+  font-size: 14px;
+  color: #000;
+}
+@keyframes scrollClocks {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
+}
+</style>
 
-    .clock-item {
-      display: inline-block;
-      margin: 0 40px;
-      color: #0f0;
-      font-family: monospace;
-      font-size: 18px;
-    }
+<script>
+function updateClocks() {
+  const zones = {
+    'clock-ny': 'America/New_York',
+    'clock-london': 'Europe/London',
+    'clock-tokyo': 'Asia/Tokyo',
+    'clock-dubai': 'Asia/Dubai',
+    'clock-paris': 'Europe/Paris',
+    'clock-sydney': 'Australia/Sydney',
+    'clock-ny2': 'America/New_York',
+    'clock-london2': 'Europe/London',
+    'clock-tokyo2': 'Asia/Tokyo',
+    'clock-dubai2': 'Asia/Dubai',
+    'clock-paris2': 'Europe/Paris',
+    'clock-sydney2': 'Australia/Sydney'
+  };
 
-    @keyframes scrollClocks {
-      0% { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
-    }
-  </style>
-</head>
-<body>
+  for (const id in zones) {
+    const time = new Date().toLocaleTimeString('en-US', {
+      hour: '2-digit',
+      minute: '2-digit',
+      hour12: false,
+      timeZone: zones[id]
+    });
+    document.getElementById(id).textContent = time;
+  }
+}
+updateClocks();
+setInterval(updateClocks, 60000);
+</script>
 
   <!-- الشريط العلوي -->
   <div class="navbar">
