--- a/home.html
+++ b/home.html
@@ -98,12 +98,8 @@
     }
 
     @keyframes scrollSlider {
-      0% {
-        transform: translateX(0);
-      }
-      100% {
-        transform: translateX(-400vw);
-      }
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-400vw); }
     }
 
     .footer {
@@ -145,18 +141,21 @@
     /* الساعات الدائرية المتحركة */
     .clock-container-animate {
       overflow: hidden;
-      background: #000;
       padding: 20px 0;
-      direction: ltr;
+      background: transparent;
+      direction: rtl;
     }
+
     .clock-track-animate {
       display: flex;
       width: max-content;
-      animation: scrollClocks 60s linear infinite;
+      animation: scrollClocksReverse 60s linear infinite;
     }
+
     .clock-item {
       margin: 0 25px;
     }
+
     .clock-circle {
       width: 90px;
       height: 90px;
@@ -172,14 +171,16 @@
       font-family: monospace;
       box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
+
     .city-label {
       margin-top: 8px;
       font-size: 14px;
       color: #000;
     }
-    @keyframes scrollClocks {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-50%); }
+
+    @keyframes scrollClocksReverse {
+      0% { transform: translateX(-50%); }
+      100% { transform: translateX(0); }
     }
   </style>
 </head>
