--- a/home.html
+++ b/home.html
@@ -140,20 +140,43 @@
 
     /* الساعات الدائرية الثابتة */
     .clock-circle {
-      width: 100px;
-      height: 100px;
-      margin: 0 auto;
-      border: 4px solid #aaa;
-      border-radius: 50%;
-      background: #fff;
-      color: #000;
-      font-size: 16px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: monospace;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-    }
+  position: relative;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border: 4px solid #aaa;
+  border-radius: 50%;
+  background: #000;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+}
+
+.hand {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform-origin: bottom center;
+  transform: rotate(0deg);
+  background: #0f0;
+  border-radius: 2px;
+}
+
+.hour {
+  width: 4px;
+  height: 25px;
+  background: #0f0;
+}
+
+.minute {
+  width: 3px;
+  height: 35px;
+  background: #0f0;
+}
+
+.second {
+  width: 2px;
+  height: 40px;
+  background: red;
+}
 
     .city-label {
       margin-top: 10px;
@@ -181,19 +204,31 @@
       </div>
     </div>
 
-    <!-- ساعات عالمية ثابتة -->
+    <!-- ساعات عالمية بعقارب -->
 <div class="container my-5">
   <div class="row text-center g-4 justify-content-center">
     <div class="col-4">
-      <div class="clock-circle" id="clock-london"></div>
+      <div class="clock-circle" id="clock-london">
+        <div class="hand hour" id="hour-london"></div>
+        <div class="hand minute" id="minute-london"></div>
+        <div class="hand second" id="second-london"></div>
+      </div>
       <div class="city-label">لندن</div>
     </div>
     <div class="col-4">
-      <div class="clock-circle" id="clock-tokyo"></div>
+      <div class="clock-circle" id="clock-tokyo">
+        <div class="hand hour" id="hour-tokyo"></div>
+        <div class="hand minute" id="minute-tokyo"></div>
+        <div class="hand second" id="second-tokyo"></div>
+      </div>
       <div class="city-label">طوكيو</div>
     </div>
     <div class="col-4">
-      <div class="clock-circle" id="clock-riyadh"></div>
+      <div class="clock-circle" id="clock-riyadh">
+        <div class="hand hour" id="hour-riyadh"></div>
+        <div class="hand minute" id="minute-riyadh"></div>
+        <div class="hand second" id="second-riyadh"></div>
+      </div>
       <div class="city-label">الرياض</div>
     </div>
   </div>
@@ -242,27 +277,30 @@
     }
     setInterval(showNextAd, 10000);
 
-    // تحديث الساعات
+    // تحديث الساعات بالعقارب
 const clocks = [
-  { id: 'clock-london', zone: 'Europe/London' },
-  { id: 'clock-tokyo', zone: 'Asia/Tokyo' },
-  { id: 'clock-riyadh', zone: 'Asia/Riyadh' }
+  { city: 'london', zone: 'Europe/London' },
+  { city: 'tokyo', zone: 'Asia/Tokyo' },
+  { city: 'riyadh', zone: 'Asia/Riyadh' }
 ];
 
-    function updateClocks() {
-      clocks.forEach(clock => {
-        const time = new Date().toLocaleTimeString('en-US', {
-          hour: '2-digit',
-          minute: '2-digit',
-          hour12: false,
-          timeZone: clock.zone
-        });
-        document.getElementById(clock.id).textContent = time;
-      });
-    }
+function updateAnalogClocks() {
+  clocks.forEach(clock => {
+    const now = new Date().toLocaleString("en-US", { timeZone: clock.zone });
+    const time = new Date(now);
 
-    updateClocks();
-    setInterval(updateClocks, 60000);
+    const hourDeg = (time.getHours() % 12) * 30 + time.getMinutes() * 0.5;
+    const minuteDeg = time.getMinutes() * 6;
+    const secondDeg = time.getSeconds() * 6;
+
+    document.getElementById(`hour-${clock.city}`).style.transform = `rotate(${hourDeg}deg)`;
+    document.getElementById(`minute-${clock.city}`).style.transform = `rotate(${minuteDeg}deg)`;
+    document.getElementById(`second-${clock.city}`).style.transform = `rotate(${secondDeg}deg)`;
+  });
+}
+
+updateAnalogClocks();
+setInterval(updateAnalogClocks, 1000);
   </script>
 
 </body>
