--- a/home.html
+++ b/home.html
@@ -146,7 +146,7 @@
   margin: 0 auto;
   border: 4px solid #aaa;
   border-radius: 50%;
-  background: #000;
+  background: #fff; /* خلفية بيضاء */
   box-shadow: 0 2px 10px rgba(0,0,0,0.4);
 }
 
@@ -156,33 +156,38 @@
   left: 50%;
   transform-origin: bottom center;
   transform: rotate(0deg);
-  background: #0f0;
+  background: #333; /* أسود دخاني */
   border-radius: 2px;
 }
 
 .hour {
   width: 4px;
   height: 25px;
-  background: #0f0;
 }
 
 .minute {
   width: 3px;
   height: 35px;
-  background: #0f0;
 }
 
 .second {
   width: 2px;
   height: 40px;
-  background: red;
 }
 
-    .city-label {
-      margin-top: 10px;
-      font-size: 15px;
-      color: #000; /* اللون الأسود */
-    }
+.clock-circle .number {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 10px;
+  color: #333;
+}
+
+.clock-circle .number span {
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
   </style>
 </head>
 <body>
@@ -204,27 +209,74 @@
       </div>
     </div>
 
-    <!-- ساعات عالمية بعقارب -->
+    <!-- ساعات عالمية بعقارب مع أرقام -->
 <div class="container my-5">
   <div class="row text-center g-4 justify-content-center">
+    <!-- لندن -->
     <div class="col-4">
       <div class="clock-circle" id="clock-london">
+        <div class="number">
+          <span style="top: 10%; left: 50%;">12</span>
+          <span style="top: 20%; left: 75%;">1</span>
+          <span style="top: 35%; left: 90%;">2</span>
+          <span style="top: 50%; left: 95%;">3</span>
+          <span style="top: 65%; left: 90%;">4</span>
+          <span style="top: 80%; left: 75%;">5</span>
+          <span style="top: 90%; left: 50%;">6</span>
+          <span style="top: 80%; left: 25%;">7</span>
+          <span style="top: 65%; left: 10%;">8</span>
+          <span style="top: 50%; left: 5%;">9</span>
+          <span style="top: 35%; left: 10%;">10</span>
+          <span style="top: 20%; left: 25%;">11</span>
+        </div>
         <div class="hand hour" id="hour-london"></div>
         <div class="hand minute" id="minute-london"></div>
         <div class="hand second" id="second-london"></div>
       </div>
       <div class="city-label">لندن</div>
     </div>
+
+    <!-- طوكيو -->
     <div class="col-4">
       <div class="clock-circle" id="clock-tokyo">
+        <div class="number">
+          <span style="top: 10%; left: 50%;">12</span>
+          <span style="top: 20%; left: 75%;">1</span>
+          <span style="top: 35%; left: 90%;">2</span>
+          <span style="top: 50%; left: 95%;">3</span>
+          <span style="top: 65%; left: 90%;">4</span>
+          <span style="top: 80%; left: 75%;">5</span>
+          <span style="top: 90%; left: 50%;">6</span>
+          <span style="top: 80%; left: 25%;">7</span>
+          <span style="top: 65%; left: 10%;">8</span>
+          <span style="top: 50%; left: 5%;">9</span>
+          <span style="top: 35%; left: 10%;">10</span>
+          <span style="top: 20%; left: 25%;">11</span>
+        </div>
         <div class="hand hour" id="hour-tokyo"></div>
         <div class="hand minute" id="minute-tokyo"></div>
         <div class="hand second" id="second-tokyo"></div>
       </div>
       <div class="city-label">طوكيو</div>
     </div>
+
+    <!-- الرياض -->
     <div class="col-4">
       <div class="clock-circle" id="clock-riyadh">
+        <div class="number">
+          <span style="top: 10%; left: 50%;">12</span>
+          <span style="top: 20%; left: 75%;">1</span>
+          <span style="top: 35%; left: 90%;">2</span>
+          <span style="top: 50%; left: 95%;">3</span>
+          <span style="top: 65%; left: 90%;">4</span>
+          <span style="top: 80%; left: 75%;">5</span>
+          <span style="top: 90%; left: 50%;">6</span>
+          <span style="top: 80%; left: 25%;">7</span>
+          <span style="top: 65%; left: 10%;">8</span>
+          <span style="top: 50%; left: 5%;">9</span>
+          <span style="top: 35%; left: 10%;">10</span>
+          <span style="top: 20%; left: 25%;">11</span>
+        </div>
         <div class="hand hour" id="hour-riyadh"></div>
         <div class="hand minute" id="minute-riyadh"></div>
         <div class="hand second" id="second-riyadh"></div>
